# ECFPinvert

./: README.md  benchmark.py  pyproject.toml  search.py  test_molforge.smi  utils.py
data/: GDB07_10000.smi  GDB08_10000.smi  GDB09_10000.smi  GDB10_10000.smi  GDB11_10000.smi  GDB17_10000.smi  chembl1000.smi
