[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
requires-python = ">= 3.8, < 3.12"

[project]
name = "ecfpinvert"
version = "2024.1.1"
requires-python = ">=3.10"
license = {file = "LICENSE", content-type = "text/plain"}
readme = {file = "README.md", content-type = "text/markdown"}
description = "An algorithmic/heuristics-driven approach to ECFP inversion."
keywords = ["cheminformatics", "ECFP", "inversion"]
authors = [{name = "Wim Dehaen", email = "dehaenw@vscht.cz"}]
maintainers = [{name = "Wim Dehaen", email = "dehaenw@vscht.cz"}]
dependencies = [
    "rdkit==2022.09.5",
    "numpy==1.23.4",
    ]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
include-package-data = true

[project.urls]
homepage = "https://github.com/dehaenw/ECFPinvert"
repository = "https://github.com/dehaenw/ECFPinvert"
documentation = "https://github.com/dehaenw/ECFPinvert"